mule-management-console/v/3.8/setting-up-mmc-mule-esb-communications.adoc
= 设置MMC-Mule运行时通信

本页面涵盖：

* 如何在MMC中注册或取消注册Mule运行时服务器
* 如何配置Mule运行时服务器和MMC之间的通信设置

*Contents:*

== 假设

本文档假定您熟悉基本的 link:/mule-management-console/v/3.8/architecture-of-the-mule-management-console[Mule管理控制台的架构]，并且您拥有 link:/mule-management-console/v/3.8/installing-mmc[安装]管理控制台的试用版或生产版。

==  MMC服务器通信

Mule管理控制台是一个Web应用程序，可用于监视和管理一个或多个Mule运行时（以前称为Mule ESB服务器），群集和应用程序。管理控制台通过安装在每个Mule运行时服务器上的MMC代理与Mule运行时服务器进行通信。为了在MMC和Mule运行时服务器之间进行通信，您需要在管理控制台中注册服务器。

MMC和Mule运行时服务器之间的通信是通过HTTP开始的，但在初始握手和身份验证之后，HTTP连接将被丢弃，并打开一个新的HTTPS连接。

包含在Mule conf文件夹中的文件`tls-default.conf`和`tls-fips140-2.conf`允许您微调可用于设置HTTPS连接的协议。

== 使用MMC注册Mule运行时

每个Mule运行时只能用一个MMC注册，但每个MMC可以管理无限数量的Mule运行时。


当您第一次运行MMC的 link:/mule-management-console/v/3.8/installing-the-production-version-of-mmc[生产版本]时，它将尝试检测网络上的任何Mule运行时，但不会尝试与它找到的任何服务器配对。您必须手动注册您的Mule运行时。

要将MMC与Mule实例配对，可以向MMC提供在Mule运行时监听的Mule代理的URL。默认端口是7777，路径是`mmc-support`。因此，如果您希望在主机16.172.1.25上注册Mule运行时，则URL将为`+http://16.172.1.25:7777/mmc-support+`。当您将此URL提供给MMC时，管理控制台将尝试与指定URL中的Mule代理配对，然后报告成功或失败。

要使用MMC注册Mule运行时，请按照下列步骤操作：

. 转到*Servers*标签。
. 左侧窗格中是按组分组的服务器列表。如果MMC找到任何活动的服务器，它将显示*Unregistered*标题中找到的服务器数量，如下所示。
+
image:unreg_servers.png[unreg_servers]

. 点击*Unregistered*。 MMC将显示它找到的未注册服务器列表（如果有），包括每个服务器的主机和端口。
+
image:unreg_servers_list.png[unreg_servers_list]

. 如果您希望注册的服务器位于此列表中，请单击服务器名称旁边的复选框（请参阅上面的鼠标指针位置），然后单击右上角的*Register*。 MMC将尝试注册服务器，并报告成功或失败。
. 如果您希望注册的服务器在*Unregistered Servers*列表中不是_not_，请点击右上角的*New Server*。
+
image:add_server_manually.png[add_server_manually]

. 手动输入您的服务器名称和网址，然后点击*Add*。 MMC将尝试注册服务器，并报告成功或失败。

注册服务器后，请点击左侧服务器组窗格中的*All*，进入**All Servers **列表，您应该在该列表中看到MMC检测到的所有服务器。此外，所有注册的服务器都将显示其状态（已停止服务器的红色指示器;正在运行的绿色）。

image:reg_servers_list.png[reg_servers_list]

== 将Mule运行时服务器注册到新MMC

每个Mule运行时服务器一次只能注册到一个MMC。如果要将Mule运行时服务器注册到新的MMC，则必须首先在服务器当前注册的MMC中取消注册。您可以在MMC本身或服务器的配置文件中执行此操作。两种方法都在下面解释。

=== 取消注册Mule运行时

[NOTE]
====
如果服务器是群集的一部分，则必须在注销服务器之前解散群集。有关详细信息，请参阅 link:/mule-management-console/v/3.8/creating-or-disbanding-a-cluster[创建或解散群集]。
====

==== 通过注册的MMC取消注册服务器

. 在注册服务器的MMC中，获取包含您希望注销的服务器的服务器列表，例如通过单击服务器组窗格中的*All*。
. 通过单击服务器名称旁边的复选框来选择所需的服务器。
. 点击*Remove*，然后点击*Unregister Server(s)*。 MMC将要求确认;点击*Yes*。

服务器已被取消注册;您现在可以在另一个管理控制台中注册它。

==== 通过服务器的配置文件取消注册服务器

您可能无法通过MMC取消注册Mule服务器，例如，如果MMC已被取消部署且不再可用。在这种情况下，请按照以下步骤操作。

. 确保运行时未运行。
. 转到目录`$MULE_HOME/.mule/.agent`。该目录包含Mule运行时MMC配对信息。
. 查找并删除文件`truststore.jks`。

删除文件后，您可以按照<<Registering Mule runtime with MMC>>中列出的步骤将Mule运行时服务器注册到MMC的任何实例。当您注册服务器时，将会创建一个新的`truststore.jks`。

== 更改默认运行时代理端口

Mule运行时使用其嵌入式代理与MMC进行通信。默认情况下，代理已启用并在端口7777上进行侦听。您可以使用Java虚拟机（JVM）的{{}}参数更改端口。您可以通过两种方式来完成此操作，如下所示。

=== 在Mule启动的命令行上

如果从提供的启动脚本启动Mule运行时，可以将端口号参数作为参数包含在启动命令中，如下所示。如果在后台运行，请在`start`之后包含参数。

[source, code, linenums]
----
mule@host:/opt/mule-3.4.1/bin$ ./mule start -M-Dmule.mmc.bind.port=7783
----

（如果您希望使用多个参数，请将所有参数包含为由空格分隔的列表。）

=== 在配置文件上

将您的参数包含在配置文件`$MULE_HOME/conf/wrapper.conf`中。发行版包含带有评论的此文件;您可以根据需要编辑或添加该文件。

您必须将代理端口参数包含为`java.additional`参数。这些参数在`wrapper.conf`文件中以`wrapper.java.additional.<number>=<name>=<value>`的形式定义，例如`wrapper.java.additional.3=-Djava.net.preferIPv4Stack=TRUE`。

要添加所需的参数，请查找最后添加的附加参数，该参数将具有最高的数字。然后，用等于最高数字+ 1的连续数字添加您的参数。

例如，如果最后一个附加参数的数量是3，则添加：

[source, code, linenums]
----
wrapper.java.additional.4=-Dmule.mmc.bind.port=<number>
----

[TIP]
====
如果您希望包含一个端口范围，让Mule运行时绑定到第一个可用端口，请使用`<low port>-<high port>`。 `7780-7785`。
注意：MMC在特定的端口号上注册Mule运行时。如果Mule运行时重新启动并绑定到可用范围内的其他端口号，则Mule运行时将不再能够连接到MMC。您将不得不取消注册，然后使用新的端口号注册Mule运行时。
====

[TIP]
====
如果您希望禁用Mule实例上的代理，请使用`-Dmule.agent.enabled=<boolean>`参数。
====

[TIP]
====
有关`wrapper.conf`文件的更多信息，请查阅该文件的Java Service Wrapper link:http://wrapper.tanukisoftware.com/doc/english/properties.html[在线文档]。
====

== 更改MMC的默认端口

像所有的Web应用程序一样，Mule管理控制台监听传入的HTTP连接。如果您在Web应用程序服务器中部署了MMC，则将通过Web应用程序服务器的侦听端口访问MMC，例如默认情况下在Tomcat中为8080。在这种情况下，更改MMC侦听端口的唯一方法是更改​​Web应用程序服务器的侦听端口。

如果运行MMC的试用版，MMC将作为与其绑定在一起的Mule运行时部署的应用程序运行。默认情况下，它监听端口8585.要修改MMC的监听端口，请按照以下步骤操作。

. 确保Mule运行时未运行。
. 打开文件`$MULE_HOME/apps/mmc/mule-config.xml`进行编辑。
. 找到下面的行：
+

[source, xml, linenums]
----
<jetty:webapps port="${mule.console.bind.port:8585}"
----

. 将默认端口8585更改为所需的值，然后保存该文件。

[NOTE]
MMC的试用版不再可用。 MMC的生产版本仅通过支持门户提供给客户。

== 另请参阅

* 了解如何通过MMC link:/mule-management-console/v/3.8/managing-mule-servers-clusters-and-groups[停止或重新启动] Mule服务器或群集。
* 使用MMC将服务器和群集组织到 link:/mule-management-console/v/3.8/managing-mule-servers-clusters-and-groups[组]中。
* 创建和管理Mule服务器的 link:/mule-management-console/v/3.8/creating-or-disbanding-a-cluster[高可用性（HA）群集]。
* 了解如何向 link:/mule-management-console/v/3.8/deploying-applications[部署应用]发送Mule服务器。
